# elevenlabs-msteams-bridge-py

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/basic-bridge/: README.md  main.py
src/elevenlabs_msteams_bridge/: __init__.py  cli.py  config.py  elevenlabs.py  log.py  metrics.py  server.py  session.py  ssrf.py  vision.py
tests/: conftest.py  test_config.py  test_dotenv.py  test_hmac.py  test_protocol.py  test_server_auth.py  test_server_integration.py  test_session.py  test_ssrf.py  test_ssrf_fetch.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: architecture.md  configuration-reference.md  connecting-to-standin.md  contributing.md  example.md  getting-started.md  governors-and-privacy.md  index.mdx  library-api.md  troubleshooting.md  vision-and-tools.md  wire-protocol.md
